Modify many examples so that they typecheck

--- a/examples/test.yml
+++ b/examples/test.yml
@@ -27,18 +27,18 @@ fail:
 
 nonterm:
  - arith.cep
- - citysim.cep
- - drama_llamas.cep
- - garden.cep
+ - citysim.cep                 SENSE: input is undefined
+ - drama_llamas.cep            XXX: init_ai and friends
+ - garden.cep                  XXX: plant -> has_plant???
  - garden-small.cep
  - garden-iter3.cep
- - if.cep
+ - if.cep                      XXX: too many type errors
  - interactive-stage-test.cep
  - moveGrid.cep
  - rpg.cep
  - siedler1.cep
  - siedler_core.cep
  - simwar.cep
- - tower_of_hanoi.cep
+ - tower_of_hanoi.cep          XXX: don't understand how 'post' is used
  - tragedy.cep
  - buffy.cep
